crates/ars-core/tests/ui/has_id_on_unit_struct.rs
use ars_core::HasId;

#[derive(HasId)]
struct Props;

fn main() {}
